@@ -69,7 +69,7 @@
 #   define SNX_OPT
 #endif
 
-#ifdef WIN32
+#if defined(WIN32) || defined(WIN64)
 /* Exclude rarely-used stuff from Windows headers */
 #define WIN32_LEAN_AND_MEAN
 
@@ -78,7 +78,7 @@
 
 #include <windows.h>
 
-#endif   /* WIN32 */
+#endif   /* WIN32 || WIN64 */
 
 /*
  * ----------------------------------------------------------------------------
@@ -87,7 +87,7 @@
  * implementation.
  * ----------------------------------------------------------------------------
  */
-#ifdef WIN32
+#if defined(WIN32) || defined(WIN64)
 
 #   if defined(__GNUC__)
 #       undef _declspec
@@ -128,7 +128,7 @@
 #   define SNX_CALLBACK_DECL
 #   define SNX_STATIC_CALLBACK(__x) static __x
 
-#endif	/* WIN32 */
+#endif	/* WIN32 || WIN64 */
 
 #ifdef _SNX_BUILD_
 #   define SNX_API(__type)	SNX_EXPORT(__type)
